--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 </head>
 <body>
     <label id="contador"> 0 </label>
-    <div> 
-        <button id="restar"> Restar </button>
-        <button id="restablecer"> Restablecer </button>
-        <button id="incrementar"> Incrementar </button>
+    <div id="caja_botones"> 
+        <button id="restar" class="botones"> Restar </button>
+        <button id="restablecer" class="botones"> Restablecer </button>
+        <button id="incrementar" class="botones"> Incrementar </button>
     </div>
 </body>
 </html>
